Modificaciones de funcionamiento y diseño en asignar fiscales y en abmfiscales